# infra-colocation-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
infra/: root.hcl
infra/config/: bucket.dev.yaml  cloud-function.dev.yaml
infra/dev/bucket/: terragrunt.hcl
infra/dev/cloud-function/: terragrunt.hcl
src/: __init__.py  logger_setup.py  main.py
tests/: test_main.py
